--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.6",
-    "@astrojs/vercel": "^7.3.5",
+    "@astrojs/vercel": "^7.3.6",
     "astro": "^4.4.6",
-    "nodemailer": "^6.9.11",
+    "dotenv": "^16.4.5",
+    "nodemailer": "^6.9.13",
     "typescript": "^5.3.3"
   }
 }
